# The-AI-Engineer-Challenge

./: Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  README.md  pyproject.toml  vercel.json
api/: chat.py  health.py
frontend/: README.md  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatMessage.tsx  SettingsModal.tsx  TypingIndicator.tsx
frontend/src/services/: api.ts
